--- a/FAQ/admin/src/index.css
+++ b/FAQ/admin/src/index.css
@@ -86,13 +86,14 @@ html {
 body {
   background: var(--background-color);
   color: var(--text-color);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   line-height: 1;
 }
-p {
+.nofaq {
   margin: 0;
+  color: black;
 }
 h1,
 h2,
